infra/k8s/overlays/stage/api-gateway-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: api-gateway
          image: ghcr.io/kis-nexus/api-gateway:stage-latest
          resources:
            requests:
              cpu: 150m
              memory: 192Mi
            limits:
              cpu: 750m
              memory: 768Mi
