infra/k8s/overlays/stage/api-gateway-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
spec:
  rules:
    - host: api.stage.kis.example.com
